--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!
+{% block title %}Login
 {% endblock %}
 
 {% block body %}
 	<div>
 		<div class="row">
-
-			<div class="col-md-5 login-image  d-md-block">
+			<div class="col-md-5 login-image d-md-block">
 				<img src="{{ asset('images/left-col.png') }}" alt="">
 			</div>
 
@@ -35,40 +34,48 @@
 						<hr class="flex-grow-1">
 					</div>
 
+					<!-- Form Start -->
+					{{ form_start(form, {'attr': {'class': 'position-relative'}}) }}
+
 					<!-- Email Field -->
 					<div class="mb-3 position-relative">
-						<label class="form-label text-dark">Email</label>
-						<div class="input-group">
-							<input type="email" class="form-control py-2" placeholder="Enter your email">
-						</div>
+						{{ form_label(form.email, null, {'label_attr': {'class': 'form-label text-dark'}}) }}
+						{{ form_widget(form.email, {'attr': {
+                                'class': 'form-control py-2',
+                                'placeholder': 'Enter your email'
+                            }}) }}
 					</div>
 
 					<!-- Password Field -->
 					<div class="mb-3 position-relative">
-						<label class="form-label text-dark">Password</label>
-						<div class="input-group">
-							<input type="password" class="form-control py-2" placeholder="Enter your password">
-						</div>
+						{{ form_label(form.password, null, {'label_attr': {'class': 'form-label text-dark'}}) }}
+						{{ form_widget(form.password, {'attr': {
+                                'class': 'form-control py-2',
+                                'placeholder': 'Enter your password'
+                            }}) }}
 					</div>
 
 					<!-- Remember Me & Forgot Password -->
 					<div class="d-flex justify-content-between align-items-center mb-4 position-relative">
 						<div class="form-check">
-							<input class="form-check-input" type="checkbox" id="rememberMe">
-							<label class="form-check-label" for="rememberMe">Remember me</label>
+							{{ form_widget(form.remember_me, {'attr': {'class': 'form-check-input'}}) }}
+							{{ form_label(form.remember_me, null, {'label_attr': {'class': 'form-check-label'}}) }}
 						</div>
 						<a href="#" class="text-decoration-none" style="color: #6c5ce7;">Forgot password?</a>
 					</div>
 
 					<!-- Sign In Button -->
-					<div class="mb-3 position-relative">
-						<button class="btn w-100 py-2 rounded-3 text-white" style="background-color: #6c5ce7;">Sign in</button>
-					</div>
+					{{ form_widget(form.submit, {'attr': {
+                            'class': 'btn w-100 py-2 rounded-3 text-white',
+                            'style': 'background-color: #6c5ce7;'
+                        }}) }}
+
+					{{ form_end(form) }}
 
 					<!-- Create Account -->
 					<div class="text-center position-relative">
 						<span class="text-muted">Don't have an account?</span>
-						<a href="#" class="text-decoration-none ms-1" style="color: #6c5ce7;">Create account</a>
+						<a href="{{ path('app_signup') }}" class="text-decoration-none ms-1" style="color: #6c5ce7;">Create account</a>
 					</div>
 				</div>
 			</div>
