--- a/templates/signup/index.html.twig
+++ b/templates/signup/index.html.twig
@@ -34,47 +34,68 @@
 						<hr class="flex-grow-1">
 					</div>
 
+					{{ form_start(form, {'attr': {'class': 'needs-validation'}}) }}
+
 					<!-- Username Field -->
 					<div class="mb-3 position-relative">
-						<label class="form-label text-dark">Username</label>
-						<div class="input-group">
-							<input type="text" class="form-control py-2" placeholder="Enter your username">
-						</div>
+						{{ form_label(form.username, null, {'label_attr': {'class': 'form-label text-dark'}}) }}
+						{{ form_widget(form.username, {
+                            'attr': {
+                                'class': 'form-control py-2',
+                                'placeholder': 'Enter your username'
+                            }
+                        }) }}
+						{{ form_errors(form.username) }}
 					</div>
 
 					<!-- Email Field -->
 					<div class="mb-3 position-relative">
-						<label class="form-label text-dark">Email</label>
-						<div class="input-group">
-							<input type="email" class="form-control py-2" placeholder="Enter your email">
-						</div>
+						{{ form_label(form.email, null, {'label_attr': {'class': 'form-label text-dark'}}) }}
+						{{ form_widget(form.email, {
+                            'attr': {
+                                'class': 'form-control py-2',
+                                'placeholder': 'Enter your email'
+                            }
+                        }) }}
+						{{ form_errors(form.email) }}
 					</div>
 
 					<!-- Password Field -->
 					<div class="mb-3 position-relative">
-						<label class="form-label text-dark">Password</label>
-						<div class="input-group">
-							<input type="password" class="form-control py-2" placeholder="Enter your password">
-						</div>
+						{{ form_label(form.plainPassword.first, null, {'label_attr': {'class': 'form-label text-dark'}}) }}
+						{{ form_widget(form.plainPassword.first, {
+                            'attr': {
+                                'class': 'form-control py-2',
+                                'placeholder': 'Enter your password'
+                            }
+                        }) }}
 					</div>
 
 					<!-- Confirm Password Field -->
 					<div class="mb-4 position-relative">
-						<label class="form-label text-dark">Confirm password</label>
-						<div class="input-group">
-							<input type="password" class="form-control py-2" placeholder="Confirm your password">
-						</div>
+						{{ form_label(form.plainPassword.second, null, {'label_attr': {'class': 'form-label text-dark'}}) }}
+						{{ form_widget(form.plainPassword.second, {
+                            'attr': {
+                                'class': 'form-control py-2',
+                                'placeholder': 'Confirm your password'
+                            }
+                        }) }}
+						{{ form_errors(form.plainPassword) }}
 					</div>
 
 					<!-- Sign Up Button -->
 					<div class="mb-3 position-relative">
-						<button class="btn w-100 py-2 rounded-3 text-white" style="background-color: #6c5ce7;">Sign up</button>
+						<button type="submit" class="btn w-100 py-2 rounded-3 text-white" style="background-color: #6c5ce7;">
+							Sign up
+						</button>
 					</div>
+
+					{{ form_end(form) }}
 
 					<!-- Already have account -->
 					<div class="text-center position-relative">
 						<span class="text-muted">Already have an account?</span>
-						<a href="#" class="text-decoration-none ms-1" style="color: #6c5ce7;">Log in</a>
+						<a href="{{ path('app_login') }}" class="text-decoration-none ms-1" style="color: #6c5ce7;">Log in</a>
 					</div>
 				</div>
 			</div>
