--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -62,7 +62,9 @@
 					</li>
 				</ul>
 			</nav>
+			<div class="col-12 col-md-9 col-lg-10">
+				<h1>Helloo</h1>
+			</div>
 
-			<h1>Helloo</h1>
 		</div>
 	{% endblock %}
